--- a/src/app/MyComponent/todo/todo.component.html
+++ b/src/app/MyComponent/todo/todo.component.html
@@ -1,7 +1,13 @@
-<div *ngFor="let todo of todos">
-    <div class="card">
-        <div class="card-body">
-        <app-todo-item [todo]="todo"></app-todo-item>    
+<app-add-todo (todoAdd)="addTodo($event)" (checkboxTodo)="toggleTodo($event)" ></app-add-todo>
+<h3>Your Todo</h3>
+<div *ngIf="this.todos.length === 0;else elseBlock">No Todos to Display</div>
+
+<ng-template #elseBlock>
+    <div *ngFor="let todo of todos">
+        <div class="card">
+            <div class="card-body">
+            <app-todo-item [todo]="todo" (deleteTodo)="todoDelete($event)"></app-todo-item>    
+        </div>
     </div>
-</div>
-    </div>
+        </div>
+    </ng-template>
